--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.16.8",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "idb": "^7.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
